--- a/catalog.html
+++ b/catalog.html
@@ -10,8 +10,8 @@
     <header class="main-header inner-header">
       <div class="container">
         <div class="header-top">
-          <a href="">
-            <img class="header-img" src="images/logo/logo.svg" width="145" height="36" alt="Логотип">
+          <a class="header-top-link" href="index.html">
+            <img class="header-top-img" src="images/logo/logo.svg" width="145" height="36" alt="Логотип">
           </a>
         </div>
         <div class="header-middle">
@@ -20,7 +20,7 @@
               <svg class="menu-icon" aria-hidden="true" focusable="false" width="16" height="17" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path d="m15.7 14.69-3.1-3.1c.9-1.2 1.4-2.6 1.4-4.2 0-3.9-3.1-7-7-7s-7 3.1-7 7 3.1 7 7 7c1.6 0 3-.5 4.2-1.4l3.1 3.1c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.2-.1-.5-.3-.7ZM2 7.39c0-2.8 2.2-5 5-5s5 2.2 5 5-2.2 5-5 5-5-2.2-5-5Z"/>
               </svg>
-              <input type="text" name="search" value="Поиск по сайту">
+              <input class="menu-form-input" type="text" name="search" placeholder="Текст поиска">
               <button class="button-search">Найти</button>
             </form>
             <div class="account logged">
@@ -31,62 +31,60 @@
                 Войти
               </button>
               <a class="account-name-link" href="#">
-                <svg class="button-icon account-icon" aria-hidden="true" focusable="false" width="13" height="13" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <svg class="account-icon" aria-hidden="true" focusable="false" width="13" height="13" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0 12.39h13c-.2-2.6-2.1-4.8-4.7-5.5 1-.6 1.7-1.7 1.7-3 0-1.9-1.6-3.5-3.5-3.5S3 1.99 3 3.89c0 1.3.7 2.4 1.7 3-2.6.7-4.5 2.9-4.7 5.5Z" />
                 </svg>
                 Коля Петухов
               </a>
-              <button class="button-logout">Выйти</button>
+             <button class="button-logout">Выйти</button>
             </div>
           </div>
-          <div class="menu-user">
-            <ul class="menu-user-list menu-user-list-action">
-              <li class="menu-user-item">
-                <a class="menu-user-link" href="#">
-                  <svg class="menu-user-icon" aria-hidden="true" focusable="false" width="10" height="13" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M6 .39H4v12h2v-12Zm-4 4H0v8h2v-8Zm8-1H8v9h2v-9Z" />
-                  </svg>
-                  Сравнить</a>
-              </li>
-              <li class="menu-user-item">
-                <a class="menu-user-link menu-user-link-cart" href="#">
-                  <svg class="menu-user-icon menu-user-icon-cart" aria-hidden="true" focusable="false" width="16" height="15" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="m15.3 5.39-3.5.2L8.6.69c-.1-.2-.4-.3-.6-.3-.2 0-.5.1-.6.3l-3.2 4.9H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1l1.9-6.9v-.2c0-.4-.3-.8-.7-.8ZM8 2.29l2.2 3.2H5.9L8 2.29Z" f/>
-                  </svg>
-                  Корзина
-                </a>
-                <div class="popover popover-close">
-                  <div class="popover-content">
-                    <ul class="popover-list">
-                      <li class="popover-item">
-                        <a class="popover-link" href="#">
-                          <img class="popover-img" src="images/products/product-1.jpg" width="39" height="43" alt="Любительская селфи-палка">
-                          <div class="popover-descr">
-                            Любительская селфи-палка
-                          </div>
-                        </a>
-                        <button class="popover-close-button"></button>
-                      </li>
-                      <li class="popover-item">
-                        <a class="popover-link" href="#">
-                          <img class="popover-img" src="images/products/product-2.jpg" width="39" height="43" alt="Профессиональная селфи-палка">
-                          <div class="popover-descr">
-                            Профессиональная селфи-палка
-                          </div>
-                        </a>
-                        <button class="popover-close-button"></button>
-                      </li>
-                    </ul>
-                    <div class="popover-result">
-                      <div class="popover-descr popover-descr-product">Товаров: <span class="popover-amount">2</span></div>
-                      <div class="popover-descr popover-descr-sum">Сумма: <span class="popover-price">2000</span> ₽</div>
-                    </div>
-                    <button class="open-cart-button">Открыть корзину</button>
+          <ul class="menu-user-list menu-user-list-action">
+            <li class="menu-user-item">
+              <a class="menu-user-link" href="#">
+                <svg class="menu-user-icon" aria-hidden="true" focusable="false" width="10" height="13" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M6 .39H4v12h2v-12Zm-4 4H0v8h2v-8Zm8-1H8v9h2v-9Z" />
+                </svg>
+                Сравнить</a>
+            </li>
+            <li class="menu-user-item">
+              <a class="menu-user-link menu-user-link-cart" href="#">
+                <svg class="menu-user-icon menu-user-icon-cart" aria-hidden="true" focusable="false" width="16" height="15" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path d="m15.3 5.39-3.5.2L8.6.69c-.1-.2-.4-.3-.6-.3-.2 0-.5.1-.6.3l-3.2 4.9H.7c-.4 0-.7.3-.7.7v.2l1.9 6.8c.2.7.7 1.1 1.4 1.1h9.4c.7 0 1.2-.4 1.4-1.1l1.9-6.9v-.2c0-.4-.3-.8-.7-.8ZM8 2.29l2.2 3.2H5.9L8 2.29Z" f/>
+                </svg>
+                Корзина
+              </a>
+              <div class="popover popover-close">
+                <div class="popover-content">
+                  <ul class="popover-list">
+                    <li class="popover-item">
+                      <a class="popover-link" href="#">
+                        <img class="popover-img" src="images/products/product-1.jpg" width="39" height="43" alt="Любительская селфи-палка">
+                        <div class="popover-descr">
+                          Любительская селфи-палка
+                        </div>
+                      </a>
+                      <button class="popover-close-button"></button>
+                    </li>
+                    <li class="popover-item">
+                      <a class="popover-link" href="#">
+                        <img class="popover-img" src="images/products/product-2.jpg" width="39" height="43" alt="Профессиональная селфи-палка">
+                        <div class="popover-descr">
+                          Профессиональная селфи-палка
+                        </div>
+                      </a>
+                      <button class="popover-close-button"></button>
+                    </li>
+                  </ul>
+                  <div class="popover-result">
+                    <div class="popover-descr popover-descr-product">Товаров: <span class="popover-amount">2</span></div>
+                    <div class="popover-descr popover-descr-sum">Сумма: <span class="popover-price">2000</span> ₽</div>
                   </div>
+                  <button class="open-cart-button">Открыть корзину</button>
                 </div>
-              </li>
-            </ul>
-          </div>
+              </div>
+            </li>
+          </ul>
         </div>
         <div class="header-bottom header-bottom-inner">
           <div class="menu-nav">
@@ -103,7 +101,7 @@
                   <a class="navigation-link" href="#">Виртуальная реальность</a>
                 </li>
                 <li class="navigation-item">
-                  <a class="navigation-link" href="#">Моноподы для cелфи</a>
+                  <a class="navigation-link" href="catalog.html">Моноподы для cелфи</a>
                 </li>
                 <li class="navigation-item">
                   <a class="navigation-link" href="#">Экшн-камеры</a>
@@ -140,7 +138,7 @@
     </header>
     <main class="main-inner main-container">
       <div class="container">
-        <h1 class="title">Моноподы для селфи</h1>
+        <h1 class="title-inner">Моноподы для селфи</h1>
       </div>
       <section class="breadcrumbs">
         <div class="container">
@@ -162,26 +160,26 @@
           <form class="catalog-inner-filter" action="https://echo.htmlacademy.ru/" method="get">
             <h2 class="catalog-inner-filter-title">фильтр:</h2>
             <fieldset class="catalog-inner-filter-group">
-              <legend class="catalog-inner-filter-subtitle">Стоимость</legend>
+              <legend class="catalog-inner-filter-subtitle catalog-inner-filter-subtitle-price">Стоимость</legend>
               <div class="range">
                 <div class="range-scale">
-                  <div class="range-bar" style="left: 0; width: 119px;">
-                    <button class="range-toggle range-toggle-min">
+                  <div class="range-bar" style="left: 0; width: 128px;">
+                    <button class="range-toggle range-toggle-min" type="button">
                       <span class="visually-hidden">Изменить минимальную цену</span>
+                    </button>
+                    <button class="range-toggle range-toggle-max" type="button">
+                      <span class="visually-hidden">Изменить максимальную цену</span>                      
+                    </button>
+                    <div class="range-wrapper-inputs">
                       <label class="range-label range-label-min">от
-                        <input class="range-input" type="number" value="0">
+                        <input class="range-input" type="number" value="0" name="min-price">
                       </label>
-                    </button>
-                    <button class="range-toggle range-toggle-max">
-                      <span class="visually-hidden">Изменить максимальную цену</span>
-                      <div class="range-label-wrapper">
-                        <label class="range-label range-label-max">до
-                          <input class="range-input" type="number" value="5000">
-                        </label>
-                      </div>
-                    </button>
+                      <label class="range-label range-label-max">до
+                        <input class="range-input" type="number" value="5000" name="max-price">
+                      </label> 
+                    </div>
                   </div>
-                </div>
+                </div>                
               </div>
             </fieldset>
             <fieldset class="catalog-inner-filter-group">
@@ -288,7 +286,7 @@
                       <button class="button-inner-card-more">Подробнее</button>
                     </div>
                     <div class="catalog-inner-card-descr">
-                      <h3 class="catalog-inner-card-subtitle">Любительская
+                      <h3 class="catalog-inner-card-subtitle">Любительская<br>
                         селфи-палка</h3>
                       <span class="catalog-inner-card-price">500 ₽</span>
                     </div>
@@ -316,7 +314,7 @@
                       <button class="button-inner-card-more">Подробнее</button>
                     </div>
                     <div class="catalog-inner-card-descr">
-                      <h3 class="catalog-inner-card-subtitle">Непотопляемая
+                      <h3 class="catalog-inner-card-subtitle">Непотопляемая<br>
                         селфи-палка</h3>
                       <span class="catalog-inner-card-price">2 500 ₽</span>
                     </div>
@@ -330,7 +328,7 @@
                       <button class="button-inner-card-more">Подробнее</button>
                     </div>
                     <div class="catalog-inner-card-descr">
-                      <h3 class="catalog-inner-card-subtitle">Селфи-палка «Следуй за мной»</h3>
+                      <h3 class="catalog-inner-card-subtitle">Селфи-палка «Следуй<br> за мной»</h3>
                       <span class="catalog-inner-card-price">1 500 ₽</span>
                     </div>
                   </a>
@@ -346,26 +344,26 @@
                 </li>
                 <li class="pagination-item">
                   <ol class="pagination-number-list">
-                    <li class="pagination-item">
+                    <li class="pagination-number-item">
                       <button class="pagination-button pagination-button-current" href="#">1
                       </button>
                     </li>
-                    <li class="pagination-item">
-                      <button class="pagination-button " href="#">2
+                    <li class="pagination-number-item">
+                      <button class="pagination-button" href="#">2
                       </button>
                     </li>
-                    <li class="pagination-item">
+                    <li class="pagination-number-item">
                       <button class="pagination-button" href="#">3
                       </button>
                     </li>
-                    <li class="pagination-item">
+                    <li class="pagination-number-item">
                       <button class="pagination-button" href="#">...
                       </button>
                     </li>
-                    <li class="pagination-item">
+                    <li class="pagination-number-item">
                       <button class="pagination-button" href="#">15
                       </button>
-                    </li>
+                    </li>                                                                 
                   </ol>
                 </li>
                 <li class="pagination-item">
@@ -381,8 +379,8 @@
     <footer class="main-footer">
       <div class="container">
         <div class="footer-top">
-          <a href="">
-            <img src="images/logo/logo-color.svg" width="145" height="36" alt="Логотип Девайс">
+          <a class="footer-top-link" href="index.html">
+            <img class="footer-top-img" src="images/logo/logo-color.svg" width="145" height="36" alt="Логотип Девайс">
           </a>
         </div>
         <div class="footer-middle">
@@ -394,8 +392,8 @@
             <li class="footer-menu-item"><a class="footer-menu-link" href="#delivery">Гарантия</a></li>
             <li class="footer-menu-item"><a class="footer-menu-link" href="#delivery">Кредит</a></li>
         </ul>
-          <div class="address">
-            <a class="footer-phone" href="tel:88128121212">+7 (812) 812-12-12</a>
+          <div class="phone">
+            <a class="footer-phone" href="tel:88128121212">Тел.: +7 (812) 812-12-12</a>
           </div>
         </div>
         <div class="footer-bottom">
@@ -436,6 +434,5 @@
         </div>
       </div>
     </footer>
-    </main>
   </body>
 </html>
